Edited userInfoSchema and rate calc form for correspondence.

--- a/templates/ratecalcform.html
+++ b/templates/ratecalcform.html
@@ -85,16 +85,16 @@
         <h2>Working time</h2>
         <div>
             <p>So… how many hours do you want to work per day?</p>
-            <input autocomplete="off" name="hoursperday" placeholder="Hours" type="number" min="0">
+            <input autocomplete="off" name="hoursDay" placeholder="Hours" type="number" min="0">
         </div>
         <div>
             <p>What percentage of this time will be spent in non-billable tasks? For instance, replying to emails, accounting, looking for new clients…
                 If you are not sure, we think 20% is a reasonable estimation in most cases. (Please don't write the % sign).</p>
-            <input autocomplete="off" name="percentnonbillable" placeholder="%" type="number" min="0">
+            <input autocomplete="off" name="percentNonBillable" placeholder="%" type="number" min="0">
         </div>
         <div>
             <p>How many days do you want to work per week?</p>
-            <input autocomplete="off" name="daysperweek" placeholder="Days" type="number" min="0" max="7">
+            <input autocomplete="off" name="daysWeek" placeholder="Days" type="number" min="0" max="7">
         </div>
         <div>
             <p>How many holidays are you taking a year?</p>
@@ -102,23 +102,23 @@
         </div>
         <div>
             <p>How many days per year will you spend in training and conferences?</p>
-            <input autocomplete="off" name="trainingdays" placeholder="Days" type="number" min="0" max="365">
+            <input autocomplete="off" name="training" placeholder="Days" type="number" min="0" max="365">
         </div>
         <div>
             <p> How many sick days are you allowing per year?</p>
-            <input autocomplete="off" name="sickdays" placeholder="Days" type="number" min="0" max="365">
+            <input autocomplete="off" name="sick" placeholder="Days" type="number" min="0" max="365">
         </div>
         <div>
             <h2>Earnings</h2>
             <p>How much do you want to earn per month net?</p>
-            <input autocomplete="off" name="netmonth" placeholder="EUR" type="number" min="0">
+            <input autocomplete="off" name="netMonthlySalary" placeholder="EUR" type="number" min="0">
         </div>
         <div>
             <p>What percentage of your earnings will be dedicated to taxes?
                 This can vary a lot between countries and income brackets, so please do your research!
                 (Please don't write the % sign.)
             </p>
-            <input autocomplete="off" name="taxpercent" placeholder="%" type="number" min="0">
+            <input autocomplete="off" name="taxPercent" placeholder="%" type="number" min="0">
         </div>
         <br>
             <button type="submit">Calculate</button>
